--- a/src/components/ListingsTableView/ListingsTableView.css
+++ b/src/components/ListingsTableView/ListingsTableView.css
@@ -1,26 +1,30 @@
-table{
-    border: 1px solid #e8e8e8;
+table {
+    border-collapse: collapse;
     width: 100%;
+    border: 1px solid #e8e8e8;
     margin-bottom: 20px;
     background-color: white;
-    border-collapse: collapse;
+    /* Set the default background color */
 }
-th, td{
+
+th,
+td {
     border: 1px solid #e9e9e9;
     padding: 8px;
     text-align: left;
-
 }
-th{
+
+th {
     background-color: #f5f5f5;
 }
-.table-footer{
-    display: flex;
-    align-items: start;
-    justify-content: space-between;
+
+.table-footer {
+    display: grid;
+    grid-template-columns: auto 1fr;
 }
 
-.table-footer button{
+.table-footer button {
+    align-self: flex-start;
     background-color: rgb(211, 6, 6);
     color: white;
     font-weight: bold;
@@ -29,13 +33,34 @@ th{
     padding: 10px;
     border-radius: 20px;
 }
-.pagination-container{
+
+.property_name {
+    cursor: pointer;
+}
+
+.selected {
+    background-color: beige;
+}
+
+.pagination {
     text-align: center;
 }
-.pagination{
-    text-align: center;
+
+
+.pagination-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
-.pagination button{
+
+
+tr:hover {
+    background-color: rgb(197, 197, 197);
+}
+
+.pagination button {
     background-color: #1976d2;
     color: white;
     border: none;
@@ -44,10 +69,22 @@ th{
     margin: 0 5px;
     border-radius: 20px;
 }
-.pagination button:disabled{
+
+.pagination button:disabled {
     background-color: #ccc;
-    cursor:not-allowed;
+    cursor: not-allowed;
 }
-.action-items-icon{
+
+.pagination button.active {
+    background-color: #00bcd4;
+}
+
+.action-items {
     cursor: pointer;
+    display: flex;
+    gap: 8px;
+}
+.action-items-icons{
+    width: 100%;
+    height: 100%;
 }
